--- a/libManagement/Form1.resx
+++ b/libManagement/Form1.resx
@@ -1299,4 +1299,7 @@
         AAAAAAAAgD141KP+PyNxCShDf+RTAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
