--- a/libManagement/mainPage/mainpage.resx
+++ b/libManagement/mainPage/mainpage.resx
@@ -310,6 +310,31 @@
         TkSuQmCC
 </value>
   </data>
+  <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABJ1JREFUSEu1
+        lflPXFUUx/kDTPoXGH+oiUZNaArTphSGYZ0ZmBlgBoZlhn1nWFseso0YoAULWBEYNS1iU9oiVkNjU7WS
+        BpFFoCAIVMpOSyhL2QqWZdCv514GqxETsfEkn8x799z7/b537nl3rJ43vHRx1g4y/wwAdcQYgeGxScg1
+        4S9Ypvy7cFHpD62uPJHR+jyikwlFpRrh7hOK202t7BabW9sw7+xApgmD3DdMb1n696C5hwkdUX795u0O
+        qSYc+jj2kM+i/sbXcFbpEGHIwua2GbNzj/F4cRWnc4og8fSHq1J3hov56ONfIpK9dXG1Tkr96OjEpEWC
+        PdEmJIogOCt1mJ6ZxdOnm1h5so7B++Owc1PDzlWNnoEh/Dw6gf6hcVRfbcBxiQISuR+hUe4ZgOGpjUJp
+        VQ0XNpvN2DJvI4ZK4KQMQsWFK5hfWMbY1EOMTU5DLNXCwd0Hxe9fQHvPABpb7nY2t/WWS9UhOrHU5zAX
+        3gs1iXsFxVLdwrG+sYG5hUXMLy7jXdMlOEg1UGgjMTA0ho6eQbR0/bSckJF/94SzZ56di0KW/nbpIYvM
+        P4eHNqzTUeaHtq4+DI1OondgGJ/dbISNvfyenYvXl8aiytw77T3WlukHDye5b70hPQ+jEw+HRyYeXJp+
+        NJ+4uLT8orNK/7KHNuqV1o6e16hqRwgbQvRVY7OIOkck940QNbV2idjYHrco5+YdIqL9POYTGPMqN6D6
+        n/ILT8ba2i/4dec3bG1u01yg4uIV3oIqXSxWVlaxvWXGxsYW/41OzaU2DIcyIAZLq5SjLtrLRSRnQ6oO
+        hcI/CtzAWx8vqAJjIKdNHh5/gEfzi6C3wMraOs6e/whO1EXutGDEkpuZXeB7FBybDmdFIHWYHsMTz3IL
+        SysIikylXMCugcIvQiAgIxE3rxC0/zhAezGFeyMTmJqZQ1ZhOSQeWi72Q3c/hsamqC0nqaTT0IYnUTv6
+        wtHDDx3dtM6SG6Ec60xuIBJLBQIiBymOnnTFkRMu1EGfoPLiVU7NtQaI3b1hfdwJb4gkf+RMH9fBVF1H
+        zSCF9THK2Tr+JVf+4eVdg7TcEoHALueQkv0OEoRCxKUXcBKEAiRnFyOV5XIol/GnHF2zsb2cge7ZfA5d
+        c4OSqlqBQEklYbqCD2o+h6nm+n+ioroe5yovg+sR3MBYbBII5BZVocxUi+/ae3GntfvANLX1oOGbZuSc
+        rQTTY3CDU2+VCQTSjGX0qiVIzCqGIXN/mNB+43skUXnTjKVgegxuEC8UCgSvaWJmEXKKKpF1pmJfmMF+
+        44xsenIh/z3Eni4A02Nwg7DEbIFAKB27Gfnn0d49iO87+vaFGew3zmjp7McXt5r4sc70GNxAG5EiEGBf
+        syY0ESo6+BT04R0UZWAsvHTxXIfpMbiBMjBGIKAIiIZ3iAHRaXmITDYemKgUI0IMmfCkI4LpMbiBq3ew
+        QPB/p5D4N9HZd5+O5f4D00al/fTGtxB7BoDpMbiBvVQjEDjprqZzJxC+YUlQBxsOjIbenpXXzs0HTI/B
+        DWzFHhkEGDYOchy1lz0Xtg67Wgxu8LpIHEng/8DKysrqd7gv7ZJw2TKxAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABJ1JREFUSEu1
@@ -724,53 +749,28 @@
   </data>
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAASoSURBVEhLlZV9TNR1HMf5o602H5C7g0Pk4LgH4Q7uuON3z4/cAyBPuqiksprIjHRzuVlmTcoa
-        WBjKCi0QUMhoWT70MDOTubTNRVYQFE3SJIPGgogn0Xvq3ff35QdIruLe22u378Pn/X343e/9i/gvebMK
-        1hBuebMKweLJLhj3evObPZ78z9ze3AsuV7aTmxq+iHGWx1sAtzcPbs8quNw5yHTlwOnKhiMzC3anF3aH
-        B1a7+yGuJDwRQ9/tZla7ByZrJoyWTJjJL8XihMnsAFeycNnsbimB3R0sNhc1y9DZsLH0Pqx/tAjqDDOU
-        agN0BgvBCp3RYuJKFyaTxalnd2YkGEx2Ym5FSpoewDFgshUIvoePmrdCJNFArTVAk2FkuNKFSW+0MlrG
-        DIXKCKmSgVzB4NzRrcBgHQK/HEDw+hvASBNONmxC0koV0tQZeq50YVJpdAw5BVqqHkNb82ZM9bwM9Nci
-        dLUGQY7Qz68BYw1gdAYoVVopV7owLUtUM9e7jgN9VcAVwuUqhH7cg2DPbgS7n0Ow61kEO8iJrr2IstXW
-        8B/y8COLjMGuOoS6yolhBQKXtiBwvgiBc7mE/Fnw5RqcuDepnSsLT77uegQvbYP/lAv+TzyELPhPZ88D
-        5/Nwdq2kjSsJT38ezEbgYhl8x03wnbTfgf8DO/CxA5XipU9yJeHpxuOCJvywF75WLUEH3zuGefx1zICO
-        DaLw75+VXJl+V6Qg/ouJRvbeyf0f0cLflAb/YTUl0JSM4VfEaNn5FJbESb9WpGnv5kr/X/KUtGLyvyYv
-        1bR+/7QWffsK8cd+B4Z2iTDwjBADb5dhatJHxzu7v4dILIUyTfMgZ/HvkskVazNJ/tTXH8LQ0BA1mNGN
-        sTG0fdvLteZU/nwlyaRMJCtUUCjVxZzVnZLKU9INJhtaWlqxbfsOlJZtoQahYBA9fb/h6W8msLNzEpXf
-        TSDku4nx8Qk6rtGaSJTn06SVp6RCnpwax1nOlzhJ7t9XU4uKyj0wkvzR6SyornkdjYfeokZVHaPY0T6C
-        rwZv0fYLL1UiL78IbCiyp3Z7ckhmmSGTKQKc5ZwSEiXrVuUW4mDDYRLHdlrEoiFBVrn7VWp4sX8KJWcH
-        MTwZoO3SjZthNNroN2EGdiGJNJkgX8dZTytaGHdmL9nthtInSPTaZvOe0VuwvqSMGh7pHkHxh7+ie/Am
-        bd//wMM0aWe/DQQ22tlNJYilZzjraUlkKahrbCbx7ISeLMAWTse0GSWlm6hh+YVB5L57Dad6R2lbLEme
-        N3caB+mzYkV84vz3gzx9eveqdIb7iEzD6M1IVWmpobOlF47mXpR/PkDbYnIVt8+dwWi2I3Z5/PwFMhgj
-        yndVQK3RkV2bKFrSxyJKlFLDhOpOpO/vxur3r2Kov4+egB2fmc/CXqmWMSDunyfg8WPeTJLIsUIkwcrk
-        VChS05HBkCKCjBhNkQV41Zchrr2CyOqfyEsxCplcSU/MzpXKFXQjwth4RAuWI0YYd4KznhNfEHsPXyAs
-        5fNijvJ40e3LogRgWbw4EknkGS1NUIKfqMQSkRJqVToWkf6oKMEojxdzms8XHiC124mHirPjFBHxNzh4
-        LmwbX6f/AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABJ1JREFUSEu1
-        lflPXFUUx/kDTPoXGH+oiUZNaArTphSGYZ0ZmBlgBoZlhn1nWFseso0YoAULWBEYNS1iU9oiVkNjU7WS
-        BpFFoCAIVMpOSyhL2QqWZdCv514GqxETsfEkn8x799z7/b537nl3rJ43vHRx1g4y/wwAdcQYgeGxScg1
-        4S9Ypvy7cFHpD62uPJHR+jyikwlFpRrh7hOK202t7BabW9sw7+xApgmD3DdMb1n696C5hwkdUX795u0O
-        qSYc+jj2kM+i/sbXcFbpEGHIwua2GbNzj/F4cRWnc4og8fSHq1J3hov56ONfIpK9dXG1Tkr96OjEpEWC
-        PdEmJIogOCt1mJ6ZxdOnm1h5so7B++Owc1PDzlWNnoEh/Dw6gf6hcVRfbcBxiQISuR+hUe4ZgOGpjUJp
-        VQ0XNpvN2DJvI4ZK4KQMQsWFK5hfWMbY1EOMTU5DLNXCwd0Hxe9fQHvPABpb7nY2t/WWS9UhOrHU5zAX
-        3gs1iXsFxVLdwrG+sYG5hUXMLy7jXdMlOEg1UGgjMTA0ho6eQbR0/bSckJF/94SzZ56di0KW/nbpIYvM
-        P4eHNqzTUeaHtq4+DI1OondgGJ/dbISNvfyenYvXl8aiytw77T3WlukHDye5b70hPQ+jEw+HRyYeXJp+
-        NJ+4uLT8orNK/7KHNuqV1o6e16hqRwgbQvRVY7OIOkck940QNbV2idjYHrco5+YdIqL9POYTGPMqN6D6
-        n/ILT8ba2i/4dec3bG1u01yg4uIV3oIqXSxWVlaxvWXGxsYW/41OzaU2DIcyIAZLq5SjLtrLRSRnQ6oO
-        hcI/CtzAWx8vqAJjIKdNHh5/gEfzi6C3wMraOs6e/whO1EXutGDEkpuZXeB7FBybDmdFIHWYHsMTz3IL
-        SysIikylXMCugcIvQiAgIxE3rxC0/zhAezGFeyMTmJqZQ1ZhOSQeWi72Q3c/hsamqC0nqaTT0IYnUTv6
-        wtHDDx3dtM6SG6Ec60xuIBJLBQIiBymOnnTFkRMu1EGfoPLiVU7NtQaI3b1hfdwJb4gkf+RMH9fBVF1H
-        zSCF9THK2Tr+JVf+4eVdg7TcEoHALueQkv0OEoRCxKUXcBKEAiRnFyOV5XIol/GnHF2zsb2cge7ZfA5d
-        c4OSqlqBQEklYbqCD2o+h6nm+n+ioroe5yovg+sR3MBYbBII5BZVocxUi+/ae3GntfvANLX1oOGbZuSc
-        rQTTY3CDU2+VCQTSjGX0qiVIzCqGIXN/mNB+43skUXnTjKVgegxuEC8UCgSvaWJmEXKKKpF1pmJfmMF+
-        44xsenIh/z3Eni4A02Nwg7DEbIFAKB27Gfnn0d49iO87+vaFGew3zmjp7McXt5r4sc70GNxAG5EiEGBf
-        syY0ESo6+BT04R0UZWAsvHTxXIfpMbiBMjBGIKAIiIZ3iAHRaXmITDYemKgUI0IMmfCkI4LpMbiBq3ew
-        QPB/p5D4N9HZd5+O5f4D00al/fTGtxB7BoDpMbiBvVQjEDjprqZzJxC+YUlQBxsOjIbenpXXzs0HTI/B
-        DWzFHhkEGDYOchy1lz0Xtg67Wgxu8LpIHEng/8DKysrqd7gv7ZJw2TKxAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABKhJREFUSEuV
+        lX1M1HUcx/mjrTYfkLuDQ+TguAfhDu6443fPj9wDIE+6qKSymsiMdHO5WWZNyhpYGMoKLRBQyGhZPvQw
+        M5O5tM1FVhAUTdIkg8aCiCfRe+rd9/flB0iu4t7ba7fvw+f9ffjd7/2L+C95swrWEG55swrB4skuGPd6
+        85s9nvzP3N7cCy5XtpObGr6IcZbHWwC3Nw9uzyq43DnIdOXA6cqGIzMLdqcXdocHVrv7Ia4kPBFD3+1m
+        VrsHJmsmjJZMmMkvxeKEyewAV7Jw2exuKYHdHSw2FzXL0NmwsfQ+rH+0COoMM5RqA3QGC8EKndFi4koX
+        JpPFqWd3ZiQYTHZibkVKmh7AMWCyFQi+h4+at0Ik0UCtNUCTYWS40oVJb7QyWsYMhcoIqZKBXMHg3NGt
+        wGAdAr8cQPD6G8BIE042bELSShXS1Bl6rnRhUml0DDkFWqoeQ1vzZkz1vAz01yJ0tQZBjtDPrwFjDWB0
+        BihVWilXujAtS1Qz17uOA31VwBXC5SqEftyDYM9uBLufQ7DrWQQ7yImuvYiy1dbwH/LwI4uMwa46hLrK
+        iWEFApe2IHC+CIFzuYT8WfDlGpy4N6mdKwtPvu56BC9tg/+UC/5PPIQs+E9nzwPn83B2raSNKwlPfx7M
+        RuBiGXzHTfCdtN+B/wM78LEDleKlT3Il4enG44Im/LAXvlYtQQffO4Z5/HXMgI4NovDvn5VcmX5XpCD+
+        i4lG9t7J/R/Rwt+UBv9hNSXQlIzhV8Ro2fkUlsRJv1akae/mSv9f8pS0YvK/Ji/VtH7/tBZ9+wrxx34H
+        hnaJMPCMEANvl2Fq0kfHO7u/h0gshTJN8yBn8e+SyRVrM0n+1NcfwtDQEDWY0Y2xMbR928u15lT+fCXJ
+        pEwkK1RQKNXFnNWdkspT0g0mG1paWrFt+w6Ulm2hBqFgED19v+Hpbyaws3MSld9NIOS7ifHxCTqu0ZpI
+        lOfTpJWnpEKenBrHWc6XOEnu31dTi4rKPTCS/NHpLKiueR2Nh96iRlUdo9jRPoKvBm/R9gsvVSIvvwhs
+        KLKndntySGaZIZMpApzlnBISJetW5RbiYMNhEsd2WsSiIUFWuftVanixfwolZwcxPBmg7dKNm2E02ug3
+        YQZ2IYk0mSBfx1lPK1oYd2Yv2e2G0idI9Npm857RW7C+pIwaHukeQfGHv6J78CZt3//AwzRpZ78NBDba
+        2U0liKVnOOtpSWQpqGtsJvHshJ4swBZOx7QZJaWbqGH5hUHkvnsNp3pHaVssSZ43dxoH6bNiRXzi/PeD
+        PH1696p0hvuITMPozUhVaamhs6UXjuZelH8+QNtichW3z53BaLYjdnn8/AUyGCPKd1VArdGRXZsoWtLH
+        IkqUUsOE6k6k7+/G6vevYqi/j56AHZ+Zz8JeqZYxIO6fJ+DxY95MksixQiTByuRUKFLTkcGQIoKMGE2R
+        BXjVlyGuvYLI6p/ISzEKmVxJT8zOlcoVdCPC2HhEC5YjRhh3grOeE18Qew9fICzl82KO8njR7cuiBGBZ
+        vDgSSeQZLU1Qgp+oxBKREmpVOhaR/qgowSiPF3OazxceILXbiYeKs+MUEfE3OHgubBtfp/8AAAAASUVO
+        RK5CYII=
 </value>
   </data>
 </root>
